<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="date_format">MM/dd/yyyy</string>
    <string name="app_name" translatable="false">Password Vault</string>
    <string name="app_description">Store your account data safely on your device to access at any place and at all times.</string>
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_entries">Accounts</string>
    <string name="bottom_navigation_settings">Settings</string>
    <string name="sort_entries_not_sorted">Not Sorted</string>
    <string name="sort_entries_name_ascending">Name: Ascending</string>
    <string name="sort_entries_name_descending">Name: Descending</string>
    <string name="sort_entries_created_ascending">Created: Ascending</string>
    <string name="sort_entries_created_descending">Created: Descending</string>
    <string name="home">Home</string>
    <string name="home_button_view_accounts">Show Accounts</string>
    <string name="home_button_add_account">Add Account</string>
    <string name="home_button_password_security">Analyze password security</string>
    <string name="home_recently_edited_title">Recently changed</string>
    <string name="home_recently_edited_none">None</string>
    <string name="entries_none">None</string>
    <string name="entries_empty_headline">No accounts</string>
    <string name="entries_empty_support">Accounts are displayed here</string>
    <string name="settings">Settings</string>
    <string name="settings_search">Searching for something different?</string>
    <string name="settings_search_qualitygates">Quality Gates</string>
    <string name="settings_search_masterpassword">Master password</string>
    <string name="settings_search_backup">Backup</string>
    <string name="settings_search_autofillauthentication">Autofill authentication</string>
    <string name="settings_customization">Customization</string>
    <string name="settings_customization_info">Darkmode • Swipe actions</string>
    <string name="settings_customization_appearance">Appearance</string>
    <string name="settings_customization_appearance_darkmode">Dark mode</string>
    <string name="settings_customization_appearance_darkmode_info">Change dark mode settings</string>
    <string name="settings_customization_appearance_darkmode_light">Light</string>
    <string name="settings_customization_appearance_darkmode_dark">Dark</string>
    <string name="settings_customization_appearance_darkmode_system">Like system</string>
    <string name="settings_customization_details">Details</string>
    <string name="settings_customization_details_swipe">Swipe actions</string>
    <string name="settings_customization_details_swipe_info">Change swipe actions</string>
    <string name="settings_customization_details_swipe_left">Left swipe action</string>
    <string name="settings_customization_details_swipe_right">Right swipe action</string>
    <string name="settings_customization_details_swipe_delete">Delete item</string>
    <string name="settings_customization_details_swipe_edit">Edit item</string>
    <string name="settings_customization_navigation">Navigation</string>
    <string name="settings_customization_navigation_resources">Open help pages in browser</string>
    <string name="settings_customization_navigation_resources_info">Open help pages in browser instead of the app</string>
    <string name="settings_security">Security</string>
    <string name="settings_security_info">App login • Biometrics • Password security</string>
    <string name="settings_security_login">App login</string>
    <string name="settings_security_login_app">Require login</string>
    <string name="settings_security_login_app_info">Require master password to open the app</string>
    <string name="settings_security_login_biometrics">Use biometrics</string>
    <string name="settings_security_login_biometrics_info">Login with biometrics</string>
    <string name="settings_security_login_password">Change password</string>
    <string name="settings_security_login_password_info">Change master password</string>
    <string name="settings_security_login_recovery">Master password recovery</string>
    <string name="settings_security_login_recovery_info">Settings for when the master password is forgotten</string>
    <string name="settings_security_password">Password Security</string>
    <string name="settings_security_password_qualitygates">Password quality gates</string>
    <string name="settings_security_password_qualitygates_info">Change quality gates for password evaluation</string>
    <string name="settings_security_password_analysis">Password analysis</string>
    <string name="settings_security_password_analysis_info">Analyze password security</string>
    <string name="settings_security_data">Data Security</string>
    <string name="settings_security_data_screenshot">Prevent Screenshots</string>
    <string name="settings_security_data_screenshot_info">Prevent Screenshots of sensitive data from being created</string>
    <string name="settings_autofill">Autofill</string>
    <string name="settings_autofill_info">Caching • Authentication</string>
    <string name="settings_autofill_toggle">Enable autofill</string>
    <string name="settings_autofill_toggle_info">Enable autofill in settings</string>
    <string name="settings_autofill_toggle_error">Cannot activate autofill service</string>
    <string name="settings_autofill_cache">Cache</string>
    <string name="settings_autofill_cache_toggle">Use caching</string>
    <string name="settings_autofill_cache_toggle_info">Accelerate autofill by caching data</string>
    <string name="settings_autofill_cache_delete">Clear cache</string>
    <string name="settings_autofill_cache_delete_info">Clear all autofill caches</string>
    <string name="settings_autofill_cache_delete_success">Deleted all caches</string>
    <string name="settings_autofill_cache_delete_error">Could not delete all caches</string>
    <string name="settings_autofill_authentication">Authentication</string>
    <string name="settings_autofill_authentication_toggle">Require authentication</string>
    <string name="settings_autofill_authentication_toggle_info">Increase security by requiring authentication prior to accessing data</string>
    <string name="settings_help">Help</string>
    <string name="settings_help_info">Help pages • Tutorials</string>
    <string name="settings_help_autofill_configuration">Configure autofill</string>
    <string name="settings_help_login_configuration">Configure app login</string>
    <string name="settings_help_backup">Manage backups</string>
    <string name="settings_help_locale">en</string>
    <string name="settings_help_locale_default" translatable="false">en</string>
    <string name="settings_help_empty_headline_internet">Cannot connect to internet</string>
    <string name="settings_help_empty_headline_404">Cannot reach server</string>
    <string name="settings_help_empty_headline_serialization">Request corrupted</string>
    <string name="settings_help_empty_support">Help pages are shown here</string>
    <string name="settings_help_language_supported">Available in your language</string>
    <string name="settings_help_language_not_supported">Only available in English</string>
    <string name="settings_about">About</string>
    <string name="settings_about_info">Legal • GitHub • App info</string>
    <string name="settings_about_usage">Legal</string>
    <string name="settings_about_usage_tos">Terms of Service</string>
    <string name="settings_about_usage_tos_info">Show Terms of Service</string>
    <string name="settings_about_usage_dependencies">Dependencies</string>
    <string name="settings_about_usage_dependencies_info">Show used software</string>
    <string name="settings_about_usage_privacypolicy">Privacy Policy</string>
    <string name="settings_about_usage_privacypolicy_info">Show Privacy Policy</string>
    <string name="settings_about_github">GitHub</string>
    <string name="settings_about_github_repo">Repository</string>
    <string name="settings_about_github_repo_info">Show app on GitHub</string>
    <string name="settings_about_github_repo_link" translatable="false">https://github.com/Christian-2003/password-vault</string>
    <string name="settings_about_github_issues">Report bugs</string>
    <string name="settings_about_github_issues_info">Report bugs on GitHub</string>
    <string name="settings_about_github_issues_link" translatable="false">https://github.com/Christian-2003/password-vault/issues</string>
    <string name="settings_about_github_update">Software update</string>
    <string name="settings_about_github_update_info">Download newest release</string>
    <string name="settings_about_github_update_link" translatable="false">https://github.com/Christian-2003/password-vault/releases/latest</string>
    <string name="settings_about_software">Software</string>
    <string name="settings_about_software_more">More info</string>
    <string name="settings_about_software_more_info">Show app in system settings</string>
    <string name="settings_about_software_version">Version {arg}</string>
    <string name="settings_about_software_copyright">© {arg} Christian-2003</string>
    <string name="settings_about_empty_headline_internet">Cannot connect to internet</string>
    <string name="settings_about_empty_headline_404">Cannot reach server</string>
    <string name="settings_about_empty_headline_serialization">Request corrupted</string>
    <string name="settings_about_empty_support">Legal pages are shown here</string>
    <string name="settings_about_language_supported">Available in your language</string>
    <string name="settings_about_language_not_supported">Only available in English</string>
    <string name="settings_data">Data</string>
    <string name="settings_data_info">Backup • Export • Delete all data</string>
    <string name="settings_data_export">Export</string>
    <string name="settings_data_export_file">account_data_{date}.html</string>
    <string name="settings_data_export_html">Export data</string>
    <string name="settings_data_export_html_info">Export the data into an unencrypted, human-readable HTML format</string>
    <string name="settings_data_export_html_error">Cannot export data</string>
    <string name="settings_data_export_html_success">Exported data to HTML</string>
    <string name="packages_title">Apps</string>
    <string name="packages_list_title">Installed apps</string>
    <string name="packages_selected_title">Selected apps</string>
    <string name="packages_selected_none">None selected</string>
    <string name="data_conversion_headline">Update Post Processing</string>
    <string name="data_conversion_subline">Updated to version {version}</string>
    <string name="data_conversion_info">Some preparation need to be made before you can continue to use the app. Please be patient, this will only take up to one minute.</string>
    <string name="detail_dialog_title_edit">Edit Detail</string>
    <string name="detail_dialog_name">Name</string>
    <string name="detail_dialog_content">Content</string>
    <string name="detail_dialog_type">Type</string>
    <string name="detail_dialog_obfuscated">Obfuscated</string>
    <string name="detail_dialog_visible">Visible</string>
    <string name="detail_dialog_username">Use as username for autofill</string>
    <string name="detail_dialog_password">Use as password for autofill</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_continue_without_converting">Continue without Converting</string>
    <string name="button_remove_package">Remove app</string>
    <string name="hint_current_password">Current password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_confirm_new_password">Confirm new password</string>
</resources>