<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activities.DataConversionActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/pv.app_bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/pv.text.app_bar"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:shapeAppearanceOverlay="@style/rounded_corners"
                    app:srcCompat="@mipmap/ic_launcher_round"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:layout_gravity="center"
                    android:padding="@dimen/default_padding"
                    android:text="@string/data_conversion_headline"
                    android:gravity="center"
                    style="@style/pv.text.highlight"/>

                <TextView
                    android:id="@+id/data_conversion_version_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:layout_gravity="center"
                    android:padding="@dimen/default_padding"
                    android:text="@string/data_conversion_subline"
                    android:gravity="center"
                    style="@style/pv.text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:layout_gravity="center"
                    android:padding="@dimen/default_padding"
                    android:text="@string/data_conversion_info"
                    android:gravity="center"
                    style="@style/pv.text"/>

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"/>

            </LinearLayout>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/data_conversion_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/button_cancel"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/data_conversion_continue_anyway"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/button_continue_without_converting"
            style="@style/Widget.Material3.Button.OutlinedButton"/>

    </LinearLayout>
</LinearLayout>
