<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.HomeFragment">

    <!-- Toolbar for the fragment -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/entries_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        style="@style/pv.app_bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:text="@string/bottom_navigation_home"
            style="@style/pv.text.app_bar"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_description"
                    android:layout_marginBottom="@dimen/default_margin"
                    style="@style/pv.text"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/home_show_accounts_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_button_view_accounts"
                    app:icon="@drawable/ic_list"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/home_add_account_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_button_add_account"
                    app:icon="@drawable/ic_add"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
