<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/space_horizontal"
        android:paddingVertical="@dimen/space_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/space_vertical"
            android:layout_marginEnd="@dimen/space_horizontal_between"
            android:layout_gravity="center"
            android:src="@drawable/ic_password"
            style="@style/image.light"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings_security_login_password"
            style="@style/text.headline"/>

    </LinearLayout>

    <View style="@style/divider"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/change_password_current_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_horizontal"
        android:layout_marginVertical="@dimen/space_vertical"
        android:hint="@string/hint_current_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/drawable_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_password_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/change_password_new_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_horizontal"
        android:hint="@string/hint_new_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/drawable_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/change_password_confirm_new_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_horizontal"
        android:layout_marginVertical="@dimen/space_vertical"
        android:hint="@string/hint_confirm_new_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/drawable_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_password_confirm_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/space_horizontal"
        android:layout_marginVertical="@dimen/space_vertical">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_horizontal_between"
            android:text="@string/button_cancel"/>

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"/>

    </LinearLayout>

</LinearLayout>
