<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_customization_details_swipe_left"
                style="@style/pv.text.highlight"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_left_swipe_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_customization_details_swipe_edit"/>

            <RadioButton
                android:id="@+id/radio_left_swipe_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_customization_details_swipe_delete"/>

            </RadioGroup>

        </LinearLayout>

        <View style="@style/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_customization_details_swipe_right"
                style="@style/pv.text.highlight"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_right_swipe_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_customization_details_swipe_edit"/>

                <RadioButton
                    android:id="@+id/radio_right_swipe_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_customization_details_swipe_delete"/>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
